# padel-scouter

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  nixpacks.toml  packages.txt  pyproject.toml  requirements.txt
.atl/: skill-registry.md
alembic/: env.py
alembic/versions/: 03992129c19c_add_mano_field_to_players.py  0eaa11c6b436_add_player_id_to_notifications.py  196fe0bc4f27_add_golpe_definitivo_and_nivel_amenaza_.py  1d19e414c1dc_add_player_id_to_tournaments.py  3c101144546e_add_tournament_system.py  44a90b8c1e2d_add_missing_match_indexes.py  55a8c9d1e2f3_add_volea_derecha_reves_to_players.py  55f198506add_add_soft_delete_to_players.py  5b1dcc84d45e_add_rival_torneo_resultado_ganado_to_.py  66b9d0e3f4a5_add_all_missing_player_columns.py  79c15a3bd2b1_merge_heads.py  7e5d30c40d8b_add_match_id_to_notifications.py  a1b2c3d4e5f6_add_partner_to_matches.py  a8f3c2d1e4b5_add_golpe_descripcion_and_puntuacion.py  c3473714ec9b_initial_tables.py  d4e5f6a7b8c9_drop_competitive_fields_from_players.py  e6d2b70ee90b_create_initial_tables.py  f21cea1ecfa6_add_notifications_table.py  ffa8efd52f7f_add_indexes_for_global_stats_queries.py
app/: __init__.py  main.py
app/api/: __init__.py
app/core/: __init__.py  config.py  dependencies.py  rate_limit.py  security.py
app/domain/: __init__.py
app/infrastructure/: __init__.py
app/schemas/: __init__.py  (+4 more)
data/: padel_rules_index.pkl
openspec/: config.yaml
scripts/: backup-db.ps1  build_rules_index.py  check_dup.py  check_tournaments.py  check_tournaments2.py
tests/: conftest.py
(+149 files in other folders)
